kubernetes/apps/garage-system/garage-operator/buckets/munki/httproute.yaml
---
# yaml-language-server: $schema=https://k8s-schemas.home-operations.com/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: munki
  annotations:
    gatus.home-operations.com/endpoint: |-
      conditions: ["[STATUS] == 404"]
spec:
  parentRefs:
    - name: envoy-external
      namespace: network
  hostnames:
    - munki.woodleigh.vic.edu.au
  rules:
    - backendRefs:
        - name: garage
          port: 3902
